<resources>
    <string name="app_name">App4H</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="activity_update_user_info">User Info</string>
    <string name="project_load_error_message">Error: Unable to load projects…</string>
    <string name="user_full_name">user_full_name</string>
    <string name="user_email">user_email</string>
    <string name="greeting">4-H Record Book Application</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="auth_failed">Authentication failed please try again or create a new account.</string>
    <string name="password_check_hint">Enter your password again</string>
    <string name="email_check_hint">Enter your email again.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="click_to_add_item_full">click an item to add &#8230;</string>
    <string name="project_name">Project Name</string>
    <string name="start_date">Start Date</string>
    <string name="required_end_date">Required End Date</string>
    <string name="years_in_project">Years in Project</string>
    <string name="project_type">Project Type</string>
    <string-array name="home_add_dialog_options">
        <item name="workbook">Workbook</item>
        <item name="other">Other</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_project">New Project</string>
    <string name="new_project_explanation">For creating a new project record book.</string>
    <string name="save">Save</string>
    <string name="title_activity_main">4-H\'er Record Book</string>
    <string name="title_activity_login">4-H\'er Record Book</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_password_again">Enter password again</string>
    <string name="prompt_email_again">Enter email again</string>
    <string name="create_user">or click here to create a new account</string>
    <string name="action_register">Register as a new user</string>
    <string name="already_have_account">or click here if you already have an account</string>
    <string name="edit_user_info">Edit Info</string>
    <string name="action_home">Home</string>
    <string name="title_activity_new_user_info_gather">newUserInfoGather</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_birthday">Birthday:</string>
    <string name="prompt_year_in_4H">Year in 4-H</string>
    <string name="update_user_info">Update Info</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_create_project_dialog">Create a new project…</string>
    <string name="due_date">Due Date</string>
    <string name="title_activity_add_project">Create a new project…</string>
    <string name="loading">Loading…</string>
    <string name="create_account_failed">Unable to create a new account. Please try again.</string>
    <string name="livestock">Livestock</string>
    <string name="general_project">General</string>
    <string name="title_activity_project_main">ProjectMain</string>
    <string name="finance_title">Finance</string>
    <string name="animal_health_title">Animal Health</string>
    <string name="other_title">Other Project Items</string>
    <string name="meetin_title"><![CDATA[Meetings & Activities]]></string>
    <string name="goals_title">Goals</string>
    <string name="title_activity_project">4-H Project Record Book</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_project2">Project2</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="new_finance_record">Finance Record</string>
    <string name="new_animal_health_title">Animal Health Record</string>
    <string name="new_goal">Goal</string>
    <string name="new_meeting">Meeting or Activity</string>
    <string name="add_new_project_record">Add a new record</string>
    <string name="title_activity_project_finance">ProjectFinanceActivity</string>
    <string name="title_activity_add_finance_dialog">AddFinanceDialog</string>
    <string name="description">Description</string>
    <string name="amount_money">$0.00</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="finance_records_balance">Balance</string>
    <string name="title_activity_project_meeting">ProjectMeetingActivity</string>
    <string name="title_activity_project_goals">ProjectGoalsActivity</string>
    <string name="title_activity_add_meeting">AddMeeting</string>
    <string name="title_activity_add_goal">AddGoal</string>
    <string name="to_do_list">To Do List</string>
    <string name="deadline">Deadline</string>
    <string name="meeting_description">Meeting Description</string>
    <string name="meeting_date">Date of Meeting or Activity</string>
    <string name="goals_title_number">Goal #X</string>
    <string name="health_date">Treatment Date</string>
    <string name="health_product_used">Product Used</string>
    <string name="health_item_species_title">Species</string>
    <string name="health_condition_title">Condition Treated</string>
    <string name="comments">Comments</string>
    <string name="heath_item_comments_title">Comments</string>
</resources>